[ID-004] com.prestashop.demo - initial implementation